proj1/tests/backup-test/correct/ast-break.py
r = [1, 2, 3, 4, 5]
for elem in r:
	print elem
	if elem == 3:
		break
