proj1/tests/backup-test/error/ast-subscript-error.py
r = [1, 2, 3]
print r[1, 2]
print r[(1, 2)]
